--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "profile-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http:127.0.0.1:5000"
+  "proxy": "http://localhost:5000"
 }
