--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
+		"setup": "npm install && cd client && npm install",
 		"server": "nodemon app.js",
 		"client": "cd client && npm start",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -17,6 +18,9 @@
 	],
 	"author": "maf",
 	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^2.0.6"
+	},
 	"dependencies": {
 		"bcrypt": "^5.0.0",
 		"concurrently": "^5.3.0",
@@ -25,6 +29,6 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.10.5"
+		"mongoose": "^5.11.9"
 	}
 }
