fixed api problems

--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-	"name": "profilia",
-	"version": "1.0.0",
-	"description": "A Simple Social Media Web App",
-	"main": "app.js",
-	"scripts": {
-		"start": "node app.js",
-		"setup": "npm install && cd client && npm install",
-		"server": "nodemon app.js",
-		"client": "cd client && npm start",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-	},
-	"keywords": [
-		"social media",
-		"social",
-		"media"
-	],
-	"author": "maf",
-	"license": "ISC",
-	"devDependencies": {
-		"nodemon": "^2.0.6"
-	},
-	"dependencies": {
-		"bcrypt": "^5.0.0",
-		"concurrently": "^5.3.0",
-		"cookie-parser": "^1.4.5",
-		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.11.9"
-	}
+  "name": "profilia",
+  "version": "1.0.0",
+  "description": "A Simple Social Media Web App",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "setup": "npm install && cd client && npm install",
+    "server": "nodemon app.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "keywords": [
+    "social media",
+    "social",
+    "media",
+    "mern",
+    "react",
+    "nodejs",
+    "mongodb",
+    "express"
+  ],
+  "author": "maf",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.9"
+  }
 }
